css/launchcircle.css
/* ... */
a.link-icon::after,
.carousel-item .item h2::after,
.company-card .title::after {
    content: '';
    display: inline-block;
    width: 16px;
    height: 11px;
    background-image: url("/images/arrow-pointing-to-right-color.svg");
    background-position: 50% 50%;
    background-repeat: no-repeat;
    background-size: cover;
    margin-left: 10px;
}

a.link-icon::after {
    width: 13px;
    height: 9px;
}

/* --------------------------------------
    404
-----------------------------------------*/

.not-found-page main {
    padding: 20px 0 140px;
    margin: 0;
    background-color: #f4f8fc;
}

.not-found-page footer {
    padding: 30px 0 0;
    margin: 0;
}

.not-found-image {
    display: flex;
    align-items: flex-end;
    overflow: hidden;
}

.not-found-description {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    flex-direction: column;
}

.not-found-image,.not-found-description {
    background-color: #f4f8fc;
    padding: 1em 1em 0;
}

.huge-text {
    font-size: 10em;
    z-index: 1;
}

/* --------------------------------------
    SECURITY PAGE
-----------------------------------------*/


.radial-container {
    position: relative;
    margin-bottom: 6em;
}

.radial {
    position: absolute;
    width: 100%;
    padding-top: 100%;
    border-radius: 50%;
}

.radial.radial-big {
    top: 0;
    left: 0;
    border: 1px solid #F7F5F5;
    transform: rotate(45deg);
}

.radial-big-wrapper {
    padding-top: 100%;
}

.radial.radial-small,
.radial.radial-services {
    left: 50%;
}

.radial.radial-small {
    transform: translate(-50%,-135%);
    border: 1px solid #d3d3d3;
}

.radial.radial-services {
    transform: translate(-50%,-250%);
    border: 0;
    background: #898AEA;
}

.radial-services .title {
    padding: 0;
    color: white;
    margin-top: -50%;
    transform: translate(25%,-50%);
    line-height: 1em;
    font-size: 1.4em;
    text-align: center;
}
/*Responsive + Firefox Fix*/
@media screen and (min--moz-device-pixel-ratio:0), screen and (max-width: 1000px) {

    .radial-services .title {
        font-size: 1.3em;
    }
    @media screen and (min--moz-device-pixel-ratio:0) {
        .security .list-view {
            display: block !important;
        }
        #our-services {
            display: none !important;
        }
    }
    @media  screen and (min--moz-device-pixel-ratio:0) and (max-width: 768px), screen and (max-width: 768px) {
        .radial-services .title {
            font-size: 1em;
        }
    }
    @media screen and (min--moz-device-pixel-ratio:0), screen and (max-width: 575px) {
        .security .list-view .point-wrapper .point {
            position: relative;
            margin: 1em 0;
            transform: translate(0,0);
        }
        .security .list-view .point-wrapper .point .caption {
            right: -1.5em;
            width: 25em;
            max-width: 65vw;
            text-align: left;
        }
        @media screen and (max-width: 360px) {
            .point-wrapper {
                padding: 0;
            }
        }
    }
}

.security .point,
header .point {
    border-radius: 50%;
    height: 3em;
    width: 3em;
    position: absolute;
    font-weight: 500;
    padding: 0.8em 1.2em;
    transform: translate(-50%,-50%);
}

header .point {
    display: inline-block;
}

.radial-big .point {
    transform: translate(-50%,-50%) rotate(-45deg);
}

.security .point-white,
header .point-white {
    background: white;
    color: black;
    box-shadow: 0 2px 9px 0 rgba(0,0,0,0.15);
}

.security .point-cyan {
    background: #12D4C4;
    color: white;
}

.m-right-width {
    margin-right: -3em;
}

.m-bot-width {
    margin-bottom: -3em;
}

.point-centerX {
    left: 50%;
}

.point-centerY {
    top: 50%;
}

.point-left {
    left: 0;
}

.point-right {
    right: 0;
}

.point-top {
    top: 0;
}

.point-bottom {
    bottom: 0;
}

.point .caption{
    font-weight: 100;
    font-size: 0.9em;
    position: absolute;
    display: inline-block;
    text-align: center;
    color: #363439;
    width: auto;
}

.point .caption.caption-med {
    width: 15ch;
}

.point .caption.caption-small {
    width: 11ch;
}

.point .caption.caption-left {
    top: 50%;
    left: -.5em;
    transform: translate(-100%,-50%);
}

.point .caption.caption-right {
    top: 50%;
    right: -.5em;
    transform: translate(100%,-50%);
}

.point .caption.caption-top {
    top: -.5em;
    left: 50%;
    transform: translate(-50%,-100%);
}

.point .caption.caption-bottom {
    bottom: -.5em;
    left: 50%;
    transform: translate(-50%,100%);
}

@media screen and (min-width: 576px) and (max-width:900px) {
    .point .caption.caption-left,
    .point .caption.caption-right {
        background: white;
        top: -.5em;
        left: 50%;
        transform: translate(-50%,-100%);
    }
}

.security .list-view .services-title {
    line-height: 2em;
    font-size: 1.4em;
    margin-bottom: 1.5em;
    background: #898AEA;
    color: white;
    text-align: center;
    border-radius: 10px;
}

/* --------------------------------------
    Difference-Page
-----------------------------------------*/

.card-header.card-transparent .card-header-wraper {
    background: transparent url("/images/map.svg") no-repeat center;
    background-size: 60%;
}

section.difference .advantage-list {
    flex-direction: row;
}

.advantage-list .advantage-item {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    margin-bottom: 3.5em;
}


.advantage-item .icon-container img {
    max-height: 60%;
    margin: 0 auto;
    display: flex;
}

.advantage-item .icon-container {
    width: 30%;
    padding: 0 1.5em;
}

.advantage-item .info-container {
    width: 70%;
    padding-top: .3em;
}

.advantage-item .info-container .title {
    font-size: 1.125em;
}

.advantage-item .info-container p {
    font-size: .8em;
}

.table-advantages th,
.table-advantages td {
    text-align: center;
    vertical-align: middle;
}
/* ... */

